# omnixys-analytics-service

./: .gitignore  .health.env  404.html  Dockerfile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci-cd.yml  daily-dependency-check.yml  dependecy-check.yml  docker-weekly.yml  security.yml  update-docker-image.yml
er-diagramm/: index.html
exports/: kpis_2025-04-17.csv  kpis_2025-04-17.xlsx
extras/db/postgres/csv/: customer_kpis.csv  order_kpis.csv  product_movement_kpis.csv  transaction_kpis.csv
extras/db/postgres/sql/: create-db-kpi.sql  create-schema-kpi.sql
komponentendiagramm/: index.html
modules/__init__/: index.html
modules/entity/: index.html
modules/graphql/: index.html
modules/repository/: index.html
modules/rest/: index.html
modules/security/: index.html
modules/service/: index.html
schichtenarchitektur/: index.html
src/analytics/: __init__.py  __main__.py  asgi_server.py  banner.py  fastapi_app.py
src/analytics/config/: __init__.py  config.py  env.py  excel.py  feature_flags.py  graphql.py  kafka.py  mongo.py  otel_setup.py  server.py  tls.py
src/analytics/config/dev/: db_populate.py  source.py  source_raw_kpi_entries.py
src/analytics/config/resources/: app.toml
src/analytics/graphql/: filters.py  mutation.py  query.py  schema.py
src/analytics/health/: router.py  service.py
src/analytics/messaging/: kafka_consumer_service.py  kafka_event_dispatcher.py  kafka_handler_registration.py  kafka_producer_service.py  kafka_singleton.py  kafka_topic_properties.py
src/analytics/messaging/decorator/: kafka_handler_registry.py
src/analytics/messaging/handlers/: account_registered_handler.py  invoice_issued_handler.py  invoice_overdue_handler.py  order_created_handler.py  payment_completed_handler.py  support_requested_handler.py  system_error_occurred_handler.py  transaction_failed_handler.py
src/analytics/model/entity/: __init__.py  base.py  customer_growth_kpi.py  invoice_kpi.py  order_kpi.py  revenue_kpi.py  support_kpi.py  system_kpi.py  transaction_kpi.py
src/analytics/model/enum/: export_format_enum.py
src/analytics/repositories/: __init__.py  slice.py
src/analytics/router/: export_route.py  shutdown_router.py
src/analytics/security/: keycloak_service.py
src/analytics/services/: __init__.py  export_service.py
src/analytics/tracing/: decorators.py  log_event_dto.py  logger_plus.py  trace_context.py  trace_context_middleware.py  trace_context_util.py
src/analytics/utils/: export_utils.py  export_utils_ORIGINAL.py
src/kpi/: __init__.py  __main__.py  asgi_server.py  banner.py  dependency_provider.py  fastapi_app.py
src/kpi/config/: __init__.py  config.py  db.py  dev_modus.py  env.py  excel.py  feature_flags.py  graphql.py  kafka.py  server.py  sync_db.py  tls.py
src/kpi/config/dev/: db_populate.py  db_populate_router.py
src/kpi/config/resources/: kpi.toml
src/kpi/config/resources/postgresql/: create.sql  drop.sql
src/kpi/graphql/: __init__.py  schema.py
src/kpi/kafka/: producer.py
src/kpi/models/: dto.py
src/kpi/models/entities/: __init__.py  base.py  customer_kpi.py  order_kpi.py  product_movement_kpi.py  transaction_kpi.py
src/kpi/repositories/: __init__.py  async_session.py  kpi_repository.py  pageable.py  session.py
src/kpi/resolvers/: kpi_query_resolver.py
src/kpi/router/: __init__.py  export_route.py  health_router.py
src/kpi/security/: keycloak_service.py
src/kpi/services/: __init__.py  export_service.py  kpi_read_service.py
src/kpi/utils/: export_utils.py  export_utils_ORIGINAL.py  export_utils_d.py  idee.py
use-cases/: index.html
